--- a/_data/template.yml
+++ b/_data/template.yml
@@ -1,7 +1,7 @@
 # Color settings (hex-codes without the leading hash-tag)
 color:
   primary: 10b9de
-  secondary: d4e9e9
+  secondary: #050505
   secondary-dark: 333
   muted: 777
 
